--- a/style.css
+++ b/style.css
@@ -11,22 +11,45 @@ body{
 
 /* CABEÇALHO */
 header{
-    background-color: cadetblue;
+    background-color: rgb(0, 255, 42 );
+    padding: 10px;
 
 }
 
+
+header > h1{
+    color: white;
+}
 
 /* MENU DE NAVEGAÇAO */
 nav{
     background-color: aquamarine;
+    display: flex;
+    background-image: linear-gradient(to bottom, rgb(0, 255, 42 ),black);
 
 }
 
+nav > a{
+    text-decoration: none;
+    color: white;
+    
+    font-weight: bold;
+    font-size: 1.1em;
+    padding: 10px;
+    
+
+}
+
+nav> a:hover{
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
 
 /* CONTEUDO PRINCIPAL */
 main{
-    background-color: brown;
-    
+    background-color: rgb(100, 100, 100);
+    max-width: 90%;
+    margin: auto;   
 }
 
 
