--- a/style.css
+++ b/style.css
@@ -8,10 +8,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:root{
+    --cor001:#0CE876;
+    --cor002:#0AC564;
+    --cor003:#0CF07A;
+    --cor004:#08A353;
+    --cor005:#078544;
+    --cor006:#2C6146;
+}
 
 /* CABEÇALHO */
 header{
-    background-color: rgb(0, 255, 42 );
+    background-color: #078544;
     padding: 10px;
 
 }
@@ -25,7 +33,7 @@ header > h1{
 nav{
     background-color: aquamarine;
     display: flex;
-    background-image: linear-gradient(to bottom, rgb(0, 255, 42 ),black);
+    background-image: linear-gradient(to bottom, #078544,black);
 
 }
 
