--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ header{
 
 header > h1{
     color: white;
+    text-align: center;
+    font-weight: 1.3em;
+    font-size: 2.3em;
 }
 
 /* MENU DE NAVEGAÇAO */
@@ -39,7 +42,6 @@ nav{
 nav > a{
     text-decoration: none;
     color: white;
-    
     font-weight: bold;
     font-size: 1.1em;
     padding: 10px;
@@ -50,15 +52,24 @@ nav > a{
 nav> a:hover{
     color: rgb(0, 0, 0);
     text-decoration: underline;
+    background-color: #0C54F0;
+    border-radius: 10px;
+    
 }
 
 /* CONTEUDO PRINCIPAL */
 main{
-    background-color: rgb(100, 100, 100);
-    max-width: 90%;
-    margin: auto;   
+    background-color: rgb(255, 255, 255);
+    max-width: 98%;
+    height: 100vh;
+    margin: auto;
+    padding-top: 10px;   
 }
 
+main > article > h2 {
+    color:var(--cor001);
+
+}
 
 
 
